# rt-weekend-rs

./: .gitignore  Cargo.toml
src/: aabb.rs  camera.rs  color.rs  hittable.rs  main.rs  material.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  scenes.rs  texture.rs  vec3.rs
src/hittable/: aa_rect.rs  box_obj.rs  bvh_node.rs  flip_face.rs  hittable_list.rs  moving_sphere.rs  rotate.rs  sphere.rs  translate.rs  xy_rect.rs
src/hittable/medium/: constant.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs
src/pdf/: cosine.rs  hittable.rs  mixture.rs
src/texture/: checker.rs  image.rs  noise.rs  solid_color.rs
