[package]
name = "rt-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
image = "0.24.5"
indicatif = "0.17.3"
itertools = "0.10.5"
nalgebra = "0.32.2"
rand = "0.8.5"
rayon = "1.7.0"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
